--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="/"><img src="{% static 'images/p_logo.png' %}" class="img-fluid" style="width: 200px"></a>
+      <a class="navbar-brand" href="/"><img src="{% static 'images/ftclogo.jpg' %}" class="img-fluid" style="width: 200px"></a>
       <!-- Power<span style="color: red">Pack</span> Fitness Club -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -36,6 +36,7 @@
           <li class="nav-item  {% if request.resolver_match.url_name == 'notifications' %} active {% endif %}">
             <a class="nav-link" href="{% url 'notifications'%}">Notifications <span class="badge badge-success">{{ subs_end_today_count }}</span></a>
           </li>
+
         </ul>
 
         <ul class="navbar-nav ml-auto">
