--- a/personal/templates/personal/instructor_list.html
+++ b/personal/templates/personal/instructor_list.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+  <h1>Instructores</h1>
+  {% for instructor in object_list %}
+    <div>
+      <img src="{{ instructor.image.url }}" alt="{{ instructor.name }}" width="100" height="100">
+      <h3>{{ instructor.name }}</h3>
+      <p>{{ instructor.bio }}</p>
+      <p>{{ instructor.certifications }}</p>
+      <p>{{ instructor.experience_years }}</p>
+    </div>
+  {% empty %}
+    <p>No instructors found.</p>
+  {% endfor %}
+{% endblock content %}
