--- a/calendario/templates/calendario/calendar.html
+++ b/calendario/templates/calendario/calendar.html
@@ -1,5 +1,12 @@
 {% extends 'calendario/base.html' %}
 
 {% block content %}
+    <div class="container mt-4 mb-4">
+        <h1>Calendario</h1>
+        <div class="calendar">
 {{ calendar }}
+                    </div>
+    </div>
+<!-- blank space  -->
+<div></div>
 {% endblock %}
