--- a/templates/base.html
+++ b/templates/base.html
@@ -92,7 +92,7 @@
     <div class="navbar-collapse collapse w-100 dual-collapse2 order-2 order-md-2">
       <ul class="navbar-nav mx-auto">
         <li class="nav-item">
-          <span class="nav-link">Follow us: </span>
+          <span class="nav-link">aFollow us: </span>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#"><img src="{% static 'images/Colored_Facebook3_svg-512.webp' %}" class="img-fluid" style="width: 30px"></a>
