--- a/books/templates/books/book-detail.html
+++ b/books/templates/books/book-detail.html
@@ -1,3 +1,10 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
+{% load static %}
 <h1>Book Details</h1>
 <h2>Name: {{object.name}}</h2>
 Pages: {{ object.pages }}
+
+{% endblock %}
