--- a/calendario/templates/calendario/base.html
+++ b/calendario/templates/calendario/base.html
@@ -13,6 +13,51 @@
   <title>Django Calendar App</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="/"><img src="{% static 'images/ftclogo.jpg' %}" class="img-fluid" style="width: 200px"></a>
+      <!-- Power<span style="color: red">Pack</span> Fitness Club -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      {% if request.user.username %}
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item {% if request.resolver_match.url_name == 'members' %} active {% endif %}">
+            <a class="nav-link" href="{% url 'members'%}">New Admission<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item  {% if request.resolver_match.url_name == 'view_member' %} active {% endif %}">
+            <a class="nav-link" href="{% url 'view_member'%}">View All Members</a>
+          </li>
+          <li class="nav-item {% if request.resolver_match.url_name == 'reports' %} active {% endif %}">
+            <a class="nav-link" href="{% url 'reports' %}">Reports</a>
+          </li>
+          <li class="nav-item  {% if request.resolver_match.url_name == 'notifications' %} active {% endif %}">
+            <a class="nav-link" href="{% url 'notifications'%}">Notifications <span class="badge badge-success">{{ subs_end_today_count }}</span></a>
+          </li>
+
+        </ul>
+
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item {% if request.resolver_match.url_name == 'change_password' %} active {% endif %}">
+              <a class="nav-link" href="{% url 'change_password'%}">Change Password</a>
+          </li>
+          <li class="nav-item  {% if request.resolver_match.url_name == 'set_wallpaper' %} active {% endif %}">
+              <a class="nav-link" href="{% url 'set_wallpaper'%}">Wallpaper<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout'%}">Logout</a>
+          </li>
+        </ul>
+        {% endif %}
+
+        <!-- <ul class="nav navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Login</a>
+            </li>
+        </ul> -->
+      </div>
+    </nav>
+<body>
 
   {% block content %}
   {% endblock %}
@@ -28,5 +73,37 @@
 
   {% block script %}
   {% endblock %}
+
+<!-- Bottom Navigation -->
+<nav class="navbar fixed-bottom navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <div class="navbar-collapse collapse w-100 dual-collapse2 order-1 order-md-0">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Website 1</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Website 2</a>
+        </li>
+      </ul>
+    </div>
+    <div class="navbar-collapse collapse w-100 dual-collapse2 order-2 order-md-2">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item">
+          <span class="nav-link">Follow us: </span>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><img src="{% static 'images/Colored_Facebook3_svg-512.webp' %}" class="img-fluid" style="width: 30px"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><img src="{% static 'images/1_Twitter_colored_svg-512.webp' %}" class="img-fluid" style="width: 30px"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><img src="{% static 'images/1_Instagram_colored_svg_1-512.webp' %}" class="img-fluid" style="width: 30px"></a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 </body>
 </html>
