base update test

--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
           <a class="nav-link" href="{% url 'home' %}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Products</a> <!---agregar los urls luego !----->
+          <a class="nav-link" href="#">Servicios</a> <!---agregar los urls luego !----->
         </li>
           <li class="nav-item">
           <a  href="{% url 'about' %}" class="nav-link" >About</a>
